--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": [
+		"airbnb",
+		"airbnb-typescript",
+		"next",
+		"next/core-web-vitals"
+	],
+	"parserOptions": {
+		"project": "./tsconfig.json"
+	},
+	"ignorePatterns": [
+		"**/*.js",
+		"**/*.jsx"
+	]
 }
