--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
 		"@mui/material": "^5.11.15",
+		"@mui/x-date-pickers": "^6.0.4",
 		"@types/node": "18.15.5",
 		"@types/react": "18.0.28",
 		"@types/react-dom": "18.0.11",
+		"dayjs": "^1.11.7",
 		"eslint": "8.36.0",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-config-next": "13.2.4",
