--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,12 @@
 		"airbnb",
 		"airbnb-typescript",
 		"next",
-		"next/core-web-vitals"
+		"next/core-web-vitals",
+		"prettier"
 	],
+	"rules": {
+		"react/jsx-props-no-spreading": "off"
+	},
 	"parserOptions": {
 		"project": "./tsconfig.json"
 	},
